--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                         <p>旅行は私に新しい文化や風景、そして人々との出会いをもたらしてくれます。<br>特に、未知の場所を探検し、その土地の歴史や伝統を学ぶことに大きな喜び<br>を感じています。これまで訪れた場所の中で、一番印象に残っているのは北<br>海道、沖縄です。そこでの経験は私の人生にとってかけがえのない宝物です。
                         </p>
                         <div class="images">
-                            <img src="images/ryokou1.jpg" alt="Chair with clothes">
-                            <img src="images/ryokou2.jpg" alt="Chair with draped fabric">
-                            <img src="images/ryokou3.jpg" alt="Table with books and fabric">
+                            <img src="ryokou1.jpg" alt="Chair with clothes">
+                            <img src="ryokou2.jpg" alt="Chair with draped fabric">
+                            <img src="ryokou3.jpg" alt="Table with books and fabric">
                         </div>
                     </div>
                 </div>
@@ -66,9 +66,9 @@
                         <p>猫は私にとって最高の癒しです。猫たちの気まぐれで愛らしい姿<br>に毎日癒されています。家ではYuriちゃん、MiuMiuちゃんと一<br>緒に暮らしています。彼（彼女）は私の最高の友達であり、日々<br>の生活に彩りを与えてくれます。
                         </p>
                         <div class="images">
-                            <img src="images/pet1.jpg" alt="Chair with clothes">
-                            <img src="images/pet2.jpg" alt="Chair with draped fabric">
-                            <img src="images/pet3.jpg" alt="Table with books and fabric">
+                            <img src="pet1.jpg" alt="Chair with clothes">
+                            <img src="pet2.jpg" alt="Chair with draped fabric">
+                            <img src="pet3.jpg" alt="Table with books and fabric">
                         </div>
                     </div>
                     <div class="sidebar">
@@ -110,10 +110,10 @@
                 </div>
                 <div class="life">
                     <div class="life-images">
-                        <img src="images/hokaidou1.jpg" alt="Wood planks">
-                        <img src="images/hokaidou2.jpg" alt="Tree rings">
-                        <img src="images/hokaidou3.jpg" alt="Wood workshop">
-                        <img src="images/hokaidou4.jpg" alt="Tree bark">
+                        <img src="hokaidou1.jpg" alt="Wood planks">
+                        <img src="hokaidou2.jpg" alt="Tree rings">
+                        <img src="hokaidou3.jpg" alt="Wood workshop">
+                        <img src="hokaidou4.jpg" alt="Tree bark">
                     </div>
                     <div class="life-content">
                         <h2>Abou My Life</h2>
@@ -126,10 +126,10 @@
                     <h1> in my free time</h1>
                 </div>
                 <div class="grid-container">
-                    <div class="image-wrapper image-wrapper-1"><img src="images/feng1.jpg" alt="Image 1"></div>
-                    <div class="image-wrapper image-wrapper-2"><img src="images/feng4.jpg" alt="Image 2"></div>
-                    <div class="image-wrapper image-wrapper-3"><img src="images/feng3.jpg" alt="Image 3"></div>
-                    <div class="image-wrapper image-wrapper-4"><img src="images/feng2.jpg" alt="Image 4"></div>
+                    <div class="image-wrapper image-wrapper-1"><img src="feng1.jpg" alt="Image 1"></div>
+                    <div class="image-wrapper image-wrapper-2"><img src="feng4.jpg" alt="Image 2"></div>
+                    <div class="image-wrapper image-wrapper-3"><img src="feng3.jpg" alt="Image 3"></div>
+                    <div class="image-wrapper image-wrapper-4"><img src="eng2.jpg" alt="Image 4"></div>
                 </div>
             </section>
             <section class="life-end"> 
@@ -144,24 +144,24 @@
         <div id="Photos">
              <div class="carousel">
                 <div class="carousel-row" id="row1">
-                    <img src="images/xi1.jpg" alt="Image 1">
-                    <img src="images/xi2.jpg" alt="Image 2">
-                    <img src="images/xi3.jpg" alt="Image 4">
-                    <img src="images/xi4.jpg" alt="Image 5">
-                    <img src="images/xi5.jpg" alt="Image 1">
-                    <img src="images/xi6.jpg" alt="Image 2">
-                    <img src="images/xi7.jpg" alt="Image 4">
-                    <img src="images/xi8.jpg" alt="Image 5">
+                    <img src="xi1.jpg" alt="Image 1">
+                    <img src="xi2.jpg" alt="Image 2">
+                    <img src="xi3.jpg" alt="Image 4">
+                    <img src="xi4.jpg" alt="Image 5">
+                    <img src="xi5.jpg" alt="Image 1">
+                    <img src="xi6.jpg" alt="Image 2">
+                    <img src="xi7.jpg" alt="Image 4">
+                    <img src="xi8.jpg" alt="Image 5">
                 </div>
                 <div class="carousel-row reverse" id="row2">
-                    <img src="images/ha1.jpg" alt="Image 1">
-                    <img src="images/yu1.jpg" alt="Image 2">
-                    <img src="images/miu5.jpg" alt="Image 4">
-                    <img src="images/ha2.jpg" alt="Image 5">
-                    <img src="images/yu5.jpg" alt="Image 1">
-                    <img src="images/miu2.jpg" alt="Image 2">
-                    <img src="images/ha3.jpg" alt="Image 4">
-                     <img src="images/yu4.jpg" alt="Image 5">
+                    <img src="ha1.jpg" alt="Image 1">
+                    <img src="yu1.jpg" alt="Image 2">
+                    <img src="/miu5.jpg" alt="Image 4">
+                    <img src="ha2.jpg" alt="Image 5">
+                    <img src="yu5.jpg" alt="Image 1">
+                    <img src="miu2.jpg" alt="Image 2">
+                    <img src="ha3.jpg" alt="Image 4">
+                     <img src="yu4.jpg" alt="Image 5">
                 </div>
             </div>
         </div>
