--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </nav>
         </div>
         <div class="logo">
-            <img src="images/icon.png" alt="logo">
+            <img src="icon.png" alt="logo">
             <h1 style="font-size: 30px;">Tudo</h1>
         </div>
     </header>
@@ -33,7 +33,7 @@
     <div id="wrapper">
         <section id="area-1">
             <section class="mainvisual">
-                <img src="images/content.jpg" alt="Main Visual">
+                <img src="content.jpg" alt="Main Visual">
                 <div class="introduction fade">
                     <div id="Introduction">
                     <p class="about">こんにちは！<br>私は猫と旅行が好きな女性です。<br />世界中の美しい場所を巡りながら、<br />愛猫と一緒に過ごす時間を楽しんでいます.<br />
