--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </section>
 
             <section class="values">
-                <img src="images/neko.jpg" alt="">
+                <img src="neko.jpg" alt="">
                 <h1>私の大切な家族である3匹の猫たちを紹介します。</h1>
             </section>
 
