--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <ul>
                     <li><a class="introduction" data-target="Introduction">Introduction</a></li>
                     <li><a class="interest" data-target="Interest">Interest</a></li>
-                    <li><a class="love" data-target="Life"></a></li>
-                    <li><a class="photos" data-target="Photos" ></a></li>
+                    <li><a class="love" data-target="Life">Life</a></li>
+                    <li><a class="photos" data-target="Photos" >Photos</a></li>
                 </ul>
             </nav>
         </div>
