--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <div class="carousel-row reverse" id="row2">
                     <img src="ha1.jpg" alt="Image 1">
                     <img src="yu1.jpg" alt="Image 2">
-                    <img src="/miu5.jpg" alt="Image 4">
+                    <img src="miu5.jpg" alt="Image 4">
                     <img src="ha2.jpg" alt="Image 5">
                     <img src="yu5.jpg" alt="Image 1">
                     <img src="miu2.jpg" alt="Image 2">
