--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="nav">
             <nav>
                 <ul>
-                    <li><a class="introduction" data-target="Introduction">Introduction</a></li>
-                    <li><a class="interest" data-target="Interest">Interest</a></li>
-                    <li><a class="love" data-target="Life">Life</a></li>
-                    <li><a class="photos" data-target="Photos" >Photos</a></li>
+                      <li><a href="#Introduction" class="h_tab" data-target="Introduction">Introduction</a></li>
+                    <li><a href="#Interest" class="h_tab" data-target="Interest">Interest</a></li>
+                    <li><a href="#Life" class="h_tab" data-target="Life">Life</a></li>
+                    <li><a href="#Photos" class="h_tab" data-target="Photos" >Photos</a></li>
                 </ul>
             </nav>
         </div>
